--- a/vision.html
+++ b/vision.html
@@ -359,6 +359,7 @@
      </div>
  </section> 
 
+ <!-- Banner_square -->
  <section class="header1 cid-rgU9oOjBai" id="header16-1x">
     <div class="container">
         <div class="row justify-content-md-center">
@@ -375,7 +376,7 @@
             <div class="card col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/20170225-o2o-99diy-510x510.jpg" alt="" title="">
+                        <img src="assets/images/20170225-o2o-99diy-510x510.jpg" alt="FB Banner" title="">
                     </div>
                     <div class="card-box pb-md-5">    
                     </div>
@@ -384,7 +385,7 @@
             <div class="card col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/po-526-510x510.jpg" alt="" title="">
+                        <img src="assets/images/po-526-510x510.jpg" alt="FB Banner" title="">
                     </div>
                     <div class="card-box pb-md-5">
                     </div>
@@ -393,18 +394,18 @@
             <div class="card col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/banner-510x510.jpg" alt="" title="">
+                        <img src="assets/images/banner-510x510.jpg" alt="FB Banner" title="">
                     </div>
-                    <div class="card-box"> 
+                    <div class="card-box pb-md-5"> 
                     </div>
                 </div>
             </div>
             <div class="card col-12 col-md-6 col-lg-3 last-child">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/yahoo-ad4-510x510.jpg" alt="" title="">
+                        <img src="assets/images/yahoo-ad4-510x510.jpg" alt="FB Banner" title="">
                     </div>
-                    <div class="card-box">    
+                    <div class="card-box pb-md-5">    
                     </div>
                 </div>
             </div>
@@ -412,7 +413,8 @@
     </div>
 </section>
 
-<section class="services1 cid-rgUwqIwzNm" id="services1-20" style="margin-bottom:60px">
+<!-- Banner_rectangle -->
+<section class="services1 cid-rgUwqIwzNm" id="services1-20">
     <div class="container wow fadeIn">
         <div class="row justify-content-center">
             <div class="title pb-5 col-12">                
@@ -420,7 +422,7 @@
             <div class="card col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/-700x335.jpg" alt="" title="">
+                        <img src="assets/images/-700x335.jpg" alt="FB Banner" title="">
                     </div>
                     <div class="card-box pb-md-5">
                     </div>
@@ -429,72 +431,99 @@
             <div class="card col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/-700x33513.jpg" alt="" title="">
+                        <img src="assets/images/-700x33513.jpg" alt="FB Banner" title="">
                     </div>
                     <div class="card-box pb-md-5">
                     </div>
                 </div>
             </div>
-            <div class="card col-12 col-md-6 col-lg-4 last-child">
+            <div class="card col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/-700x33514.jpg" alt="" title="">
+                        <img src="assets/images/-700x33514.jpg" alt="FB Banner" title="">
                     </div>
-                    <div class="card-box">                        
+                    <div class="card-box pb-md-5">                        
                    </div>
                 </div>
             </div>
-            <div class="card col-12 col-md-6 col-lg-4 last-child">
+            <div class="card col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/1119index.gif" alt="" title="">
+                        <img src="assets/images/towel-store.jpg" alt="MGHD Banner" title="">
                     </div>
-                    <div class="card-box">                        
+                    <div class="card-box pb-md-5">                        
                    </div>
                 </div>
             </div>
-            <div class="card col-12 col-md-6 col-lg-4 last-child">
+            <div class="card col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/1203-index-way.gif" alt="" title="">
+                        <img src="assets/images/rooster.gif" alt="MGHD Banner" title="">
                     </div>
-                    <div class="card-box">                        
+                    <div class="card-box pb-md-5">                        
                    </div>
                 </div>
             </div>
-            <div class="card col-12 col-md-6 col-lg-4 last-child">
-                <div class="card-wrapper" style="margin-bottom:50px">
+            <div class="card col-12 col-md-6 col-lg-4">
+                <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/1122index.gif" alt="" title="">
+                        <img src="assets/images/disneyland.jpg" alt="MGHD Banner" title="">
                     </div>
-                    <div class="card-box">                        
+                    <div class="card-box pb-md-5">                        
+                   </div>
+                </div>
+            </div>                                    
+            <div class="card col-12 col-md-6 col-lg-4">
+                <div class="card-wrapper">
+                    <div class="card-img">
+                        <img src="assets/images/1119index.gif" alt="Yahoo Banner" title="">
+                    </div>
+                    <div class="card-box pb-md-5">                        
+                   </div>
+                </div>
+            </div>
+            <div class="card col-12 col-md-6 col-lg-4">
+                <div class="card-wrapper">
+                    <div class="card-img">
+                        <img src="assets/images/1203-index-way.gif" alt="Yahoo Banner" title="">
+                    </div>
+                    <div class="card-box pb-md-5">                        
+                   </div>
+                </div>
+            </div>
+            <div class="card col-12 col-md-6 col-lg-4">
+                <div class="card-wrapper">
+                    <div class="card-img">
+                        <img src="assets/images/1122index.gif" alt="Yahoo Banner" title="">
+                    </div>
+                    <div class="card-box pb-md-5">                        
                    </div>
                 </div>                                              
             </div>
-            <div class="card col-12 col-md-6 col-lg-4 last-child">
+            <div class="card col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/1231-index.gif" alt="" title="">
+                        <img src="assets/images/1231-index.gif" alt="Yahoo Banner" title="">
                     </div>
-                    <div class="card-box">                        
+                    <div class="card-box pb-md-5">                        
                    </div>
                 </div>
             </div>
-            <div class="card col-12 col-md-6 col-lg-4 last-child">
+            <div class="card col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/1106-2-index.gif" alt="" title="">
+                        <img src="assets/images/1106-2-index.gif" alt="Yahoo Banner" title="">
                     </div>
-                    <div class="card-box">                        
+                    <div class="card-box pb-md-5">                        
                    </div>
                 </div>
             </div>                          
-            <div class="card col-12 col-md-6 col-lg-4 last-child">
+            <div class="card col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/1108-index.gif" alt="" title="">
+                        <img src="assets/images/1108-index.gif" alt="Yahoo Banner" title="">
                     </div>
-                    <div class="card-box">                        
+                    <div class="card-box pb-md-5">                        
                    </div>
                 </div>
             </div>                                                 
@@ -505,7 +534,7 @@
 <!-- 版權 -->
 <section once="" class="cid-rgCN2AJJAt" id="footer7-h">
     <div class="container">
-        <div class="media-container-row align-center mbr-white">            
+        <div class="media-container-row align-center mbr-white">
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
                 <div class="soc-item">
