--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             視覺統籌規劃
                         </h4>
-                        <p class="mbr-text mbr-fonts-style display-7">季節檔期設計、數位行銷DM</p>
+                        <p class="mbr-text mbr-fonts-style display-7">季節檔期設計、數位行銷DM、展示設計、Banner設計</p>
                     </div>
                 </div>
             </div>
