--- a/resume.html
+++ b/resume.html
@@ -198,7 +198,7 @@
                     <h2 class="mbr-section-title pb-3 mbr-fonts-style display-2"><strong>
                         專業技能</strong></h2>
                     <h3 class="mbr-section-subtitle mbr-light mbr-fonts-style display-5">
-                        Illustrator、Photoshop、InDesign、Dreamweaver、VSCode、CorelDRAW</h3>
+                        Illustrator、Photoshop、InDesign、Dreamweaver、XD、VSCode、CorelDRAW</h3>
                 </div>
             </div>
         </div>
@@ -242,6 +242,15 @@
                         </div>
                     </div>
                 </div>
+                <div class="carousel-item ">
+                    <div class="media-container-row">
+                        <div class="col-md-12">
+                            <div class="wrap-img ">
+                                <img src="assets/images/xd-1-177x177.png" class="img-responsive clients-img" alt="" title="">
+                            </div>
+                        </div>
+                    </div>
+                </div>              
                 <div class="carousel-item ">
                     <div class="media-container-row">
                         <div class="col-md-12">
